--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Luis Moreno
 description: Robotics and Software Student 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/NewLogo.png
+avatar: https://github.com/lmorenog2021/lmorenog2021.github.io/blob/master/images/NewLogo.jpg
 
 #
 # Flags below are optional
